// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/button/Button should not render a RadarAnimation if showRadar is false 1`] = `null`;

exports[`components/button/Button should render a RadarAnimation if showRadar is true 1`] = `
<RadarAnimation
  constrainToScrollParent={false}
  constrainToWindow={true}
  isShown={true}
  position="middle-right"
>
  <button
    className="btn"
    onClick={[Function]}
    type="submit"
  >
    <span
      className="btn-content"
    >
      Test
    </span>
  </button>
</RadarAnimation>
`;

exports[`components/button/Button should render icon next to text if icon and children props are both set 1`] = `
<button
  className="btn bdl-has-icon"
  onClick={[Function]}
  type="submit"
>
  <span
    className="btn-content"
  >
    Click Here
  </span>
  <span
    className="bdl-btn-icon"
  >
    <FakeIcon
      height={16}
      width={16}
    />
  </span>
</button>
`;
